--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Yo",
   "short_name": "Yo",
   "version": "0.1.2",
-  "description": "Send a Yo to your phone (gateway >= 0.9.0 only)",
+  "description": "Send a Yo to your phone",
   "homepage_url": "https://github.com/tim-hellhake/yo-notifier#readme",
   "license": "MPL-2.0",
   "author": "Tim Hellhake",
